--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <nav>  
       <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="Recetas.HTML">Recetas</a></li>
+          <li><a href="Recetas.html">Recetas</a></li>
            <li><a href="informacion.html">Información</a></li>
            <li><a href="Formulario.html">Registro</a></li>
           </ul> 
